// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sort-media should handle non-existent parent 1`] = `
{
  "content": [
    {
      "text": "Error: AxiosError: Request failed with status code 404",
      "type": "text",
    },
  ],
}
`;

exports[`sort-media should sort media items 1`] = `
{
  "content": [
    {
      "text": "Error: AxiosError: Request failed with status code 400",
      "type": "text",
    },
  ],
}
`;
